# 3d-renderer

./: .gitignore  CMakeLists.txt  README.md
src/: array.c  array.h  benchmark.h  colours.c  colours.h  constants.h  display.c  display.h  file.c  file.h  main.c  mesh.c  mesh.h  triangle.h  vector.c  vector.h
src/temp/: load_obj_file_data.c
